--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-<!--    <title>Zeus94.github.io by zeus94</title>
+    <title>Zeus94.github.io by zeus94</title>
   </head>
 
   <body>
@@ -70,8 +70,4 @@ $ git checkout gh-pages
       </div>
     </div>
   </body>
-</html>-->
-
-<?php
-echo "Hello World!"
-?>
+</html>
